--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+img{
+    width: auto;
+    max-width: 100%;
+}
 .top_pruh_in{
     max-width: 1220px;
     padding-right: 20px;
@@ -88,10 +92,33 @@
     border: none;
     outline: solid 1px #dedede;
     cursor: pointer;
+    position: relative;
 }
 .nahledy_produktu_foto_obal img{
     width: auto !important;
 }
+.nahledy_produktu > img{
+    margin: 0 !important;
+    right: 20px;
+}
+.nahledy_produktu_popis{
+    position: absolute;
+    width: auto;
+    right: 20px;
+    left: 20px;
+    height: 280px;
+    padding: 20px;
+    overflow: hidden;
+}
+.nahledy_produktu_nazev {
+    width: auto;
+    height: 54px;
+    font-size: 22px;
+    font-weight: 500;
+    overflow: hidden;
+    padding-top: 20px;
+}
+
 
 @media screen and (max-width: 991px){
     .boxy_produkty_uvodka{
