--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+body {
+    overflow-x: hidden;
+    font-size: 16px;
+}
+
 img{
     width: auto;
     max-width: 100%;
