--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ img{
     display: grid !important;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
+    margin-bottom: 20px;
 }
 .nahledy_produktu {
     float: none;
@@ -127,10 +128,61 @@ img{
     overflow: hidden;
     padding-top: 20px;
 }
-
+.nahledy_produktu_ceny {
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    height: auto;
+    margin-bottom: 20px;
+}
 
 @media screen and (max-width: 991px){
     .boxy_produkty_uvodka{
         grid-template-columns: 1fr 1fr;
     }
+}
+
+
+.aktuality_box_in {
+    float: none;
+    width: 100%;
+    height: 102px;
+}
+.infobox_pata {
+    float: none;
+    width: 100%;
+    height: 100px;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    border: 0;
+    outline: solid 1px #dedede;
+    margin-right: 0px;
+}
+
+
+.detail_foto{
+    float: none;
+    width: 50%;
+    margin-bottom: 20px;
+}
+
+.detail_box_pravy_obal {
+    float: none;
+    width: 50%;
+    margin-bottom: 20px;
+}
+
+.ps_top{
+    display: flex;
+    width: 100%;
+}
+.box_a2_h{
+    float: none;
+    width: auto;
+    flex-basis: 100%;
+}
+.box_a2{
+    float: none;
+    width: auto;
+    flex-basis: 100%;
 }
