--- a/style.css
+++ b/style.css
@@ -253,3 +253,18 @@ img{
         grid-gap: 10px;
     }
 }
+.submenu-wrap{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+}
+.submenu_kat_box{
+    float: none;
+    width: 100%;
+    height: 58px;
+    background-color: #ffffff;
+    border: solid 1px #dedede;
+    margin-right: 0;
+    margin-bottom: 0;
+    cursor: pointer;
+}
