--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img{
     }
 }
 
-.holder, .holder2 {
+.holder, .holder2, .holder3, .holder4 {
     max-width: 1220px;
     position: relative;
     z-index: 9000;
@@ -35,6 +35,8 @@ img{
     padding-left: 20px;
     width: 100%;
     margin: 0 auto;
+    background: transparent;
+    border: 0;
 }
 .clear{
     display: none !important;
@@ -246,6 +248,7 @@ img{
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     margin-bottom: 20px;
+    width: 100%;
 }
 @media screen and (max-width: 991px){
     .product-grid {
@@ -257,6 +260,7 @@ img{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
+    margin-top: 20px;
 }
 .submenu_kat_box{
     float: none;
@@ -267,4 +271,68 @@ img{
     margin-right: 0;
     margin-bottom: 0;
     cursor: pointer;
+}
+
+#filtr{
+    display: flex;
+    flex-direction: column;
+}
+.strankovani_kategorie{
+    width: auto;
+    height: auto;
+    text-align: right;
+    display: flex;
+    margin-bottom: 20px;
+    justify-content: flex-end;
+}
+
+.box_nejprodavanejsi {
+    float: none;
+    width: 100%;
+    height: 98px;
+    cursor: pointer;
+    margin-right: 0;
+    background-color: #ffffff;
+    border: solid 1px #dedede;
+    display: flex;
+    align-items: center;
+}
+.box_nejprodavanejsi_obal_text {
+    float: none;
+    width: auto;
+    height: 80px;
+    margin-left: 20px;
+    line-height: 130%;
+    margin-top: 0;
+}
+.box_nejprodavanejsi_foto {
+    float: none;
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    text-align: center;
+    line-height: 80px;
+    margin-left: 0;
+    margin-top: 0;
+    background-color: #ffffff;
+    flex-shrink: 0;
+}
+
+.box_nejprodavanejsi_cislo1 {
+    position: relative;
+    flex-shrink: 0;
+    top: 0;
+    z-index: 50;
+    width: 36px;
+    height: 100%;
+    padding: 0px;
+    padding-top: 0;
+    margin: 0px;
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+.heading-bestseller{
+    margin-top: 20px;
 }
