--- a/style.css
+++ b/style.css
@@ -150,10 +150,19 @@ img{
     justify-content: space-between;
     height: auto;
     margin-bottom: 20px;
+
 }
 .nahledy_produktu_cena{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    float: none;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.nahledy_produktu_dostupnost{
+    margin-top: 20px;
 }
 
 @media screen and (max-width: 991px){
@@ -339,4 +348,36 @@ img{
 
 .heading-bestseller{
     margin-top: 20px;
+}
+
+#top-link-block{
+    z-index: 9999;
+}
+
+@media screen and (max-width: 991px){
+    .top_menu_kat_obal{
+        background-color: #fff;
+        flex-direction: column;
+        position: fixed;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        height: 100vh;
+        justify-content: flex-start;
+        transition: .2s ease transform;
+        transform: translateX(-100%);
+        width: 360px;
+        max-width: 80%;
+        z-index: 100000;
+        padding-top: 20px;
+    }
+    .top_menu_kat_in{
+        height: 100%;
+        width: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .menu_kat_in{
+        padding-left: 0 !important;
+    }
 }
