--- a/style.css
+++ b/style.css
@@ -369,7 +369,8 @@ img{
         width: 360px;
         max-width: 80%;
         z-index: 100000;
-        padding-top: 20px;
+        padding: 20px 0;
+        overflow: auto;
     }
     .top_menu_kat_in{
         height: 100%;
@@ -379,5 +380,31 @@ img{
     }
     .menu_kat_in{
         padding-left: 0 !important;
+    }
+}
+
+
+
+
+.top_pruh2_in {
+    max-width: 1220px;
+    width: 100%;
+    height: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+.top_pruh2_logo{
+    float: none;
+    width: auto;
+    height: auto;
+}
+.top_pruh2_logo a{
+    display: flex;
+    flex-shrink: 0;
+}
+@media screen and (max-width: 991px){
+    .top_pruh2_in{
+        height: 56px;
     }
 }
