--- a/style.css
+++ b/style.css
@@ -120,8 +120,26 @@ img{
     cursor: pointer;
     position: relative;
 }
-.nahledy_produktu_foto_obal img{
-    width: auto !important;
+.nahledy_produktu_foto_obal {
+    position: relative;
+    padding-bottom: 100%;
+}
+.nahledy_produktu_foto_obal a {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.nahledy_produktu_foto_obal img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 .nahledy_produktu > img{
     margin: 0 !important;
@@ -130,11 +148,13 @@ img{
 .nahledy_produktu_popis{
     position: absolute;
     width: auto;
-    right: 20px;
-    left: 20px;
-    height: 280px;
+    right: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
     padding: 20px;
     overflow: hidden;
+    z-index: 99;
 }
 .nahledy_produktu_nazev {
     width: auto;
