--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ img{
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+    width: auto !important;
 }
 .nahledy_produktu > img{
     margin: 0 !important;
@@ -155,6 +156,10 @@ img{
     padding: 20px;
     overflow: hidden;
     z-index: 99;
+    display: flex;
+    line-height: 1.5;
+    align-items: center;
+}
 }
 .nahledy_produktu_nazev {
     width: auto;
