--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ img{
     width: auto;
     max-width: 100%;
 }
+.top_pruh{
+
+}
 .top_pruh_in{
     max-width: 1220px;
     padding-right: 20px;
@@ -19,7 +22,7 @@ img{
     margin: 0 auto;
 }
 @media screen and (max-width: 991px){
-    .top_pruh_in{
+    .top_pruh{
         display: none;
     }
 }
@@ -115,7 +118,7 @@ ul.bxslider > li{
 
 .box_nadpisy_adn{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     height: auto;
     padding: 20px 0;
@@ -238,11 +241,7 @@ ul.bxslider > li{
 
 }
 
-.aktuality_box_in {
-    float: none;
-    width: 100%;
-    height: 102px;
-}
+
 
 .infobox_pata-wrap{
     display: grid;
@@ -258,13 +257,61 @@ ul.bxslider > li{
 .infobox_pata {
     float: none;
     width: 100%;
-    height: 100px;
+    height: auto;
+    padding: 20px;
     background-color: #f5f5f5;
     font-size: 16px;
     border: solid 1px #dedede;
     margin-right: 0px;
 }
 
+.text_uvod_obal{
+    height: auto;
+    padding: 60px 0;
+}
+.pata_obal{
+    height: auto;
+}
+.pata_box1, .pata_box2{
+
+}
+span.p_nadpisy{
+    display: block;
+    padding-bottom: 20px;
+}
+.pata_odkazy{
+    height: auto;
+    margin: 0;
+    padding: 60px 0 30px 0;
+    display: block;
+    width: 100%;
+}
+.nl {
+    height: auto;
+    margin-bottom: 60px;
+}
+.nl .holder{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nl_leva{
+    float: none;
+    width: auto;
+    height: auto;
+    margin: 0;
+}
+.nl_prava{
+    float: none;
+    width: auto;
+    height: auto;
+    margin: 0;
+}
+
+.neewsletter_f a{
+    padding-top: 10px;
+    display: inline-flex;
+}
 .detail-produktu{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -462,8 +509,32 @@ ul.bxslider > li{
     display: flex;
     flex-shrink: 0;
 }
+
+.top_pruh2_text{
+    float: none;
+    display: flex;
+    flex-grow: 1;
+}
+
+.top_pruh2_vyhl{
+    border-left: solid 1px #353535;
+}
+
 @media screen and (max-width: 991px){
     .top_pruh2_in{
         height: 56px;
     }
+}
+
+.aktuality_box_in-wrap{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;;
+    grid-gap: 20px;
+    margin-bottom: 45px;
+}
+.aktuality_box_in{
+    height: auto;
+    float: none;
+    width: 100%;
+    display: flex;
 }
