--- a/style.css
+++ b/style.css
@@ -526,6 +526,7 @@ span.p_nadpisy{
     margin-right: auto;
     display: flex;
     padding: 0 20px;
+    align-items: center;
 }
 .top_pruh2_logo{
     float: none;
@@ -541,6 +542,9 @@ span.p_nadpisy{
     float: none;
     display: flex;
     flex-grow: 1;
+    margin: 0;
+    align-items: center;
+    margin-left: 20px;
 }
 
 .top_pruh2_vyhl{
