--- a/style.css
+++ b/style.css
@@ -508,6 +508,44 @@ span.p_nadpisy{
     z-index: 9999;
 }
 
+
+#navToggle{
+    height: 100%;
+    width: 52px;
+    cursor: pointer;
+    display: none;
+}
+#navToggle span{
+    height: 2px;
+    width: 18px;
+    background: #06070E;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: relative;
+    transition: 0.3s all ease;
+}
+#navToggle span::before, #navToggle span::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: white;
+    transform: translate(0%, -300%);
+    transition: 0.3s all ease;
+}
+
+#navToggle span::after {
+    transform: translate(0%, 300%);
+    width: 14px;
+}
+
+
 @media screen and (max-width: 991px){
     .top_menu_kat_obal{
         background-color: #fff;
@@ -534,6 +572,13 @@ span.p_nadpisy{
     }
     .menu_kat_in{
         padding-left: 0 !important;
+    }
+    body .--navActive{
+        overflow: hidden;
+    }
+    body .--navActive .top_menu_kat_obal{
+        transform: translateX(0%);
+        content-visibility: visible;
     }
 }
 
