--- a/style.css
+++ b/style.css
@@ -548,6 +548,7 @@ align-items: center;
     width: 52px;
     cursor: pointer;
     display: none;
+    flex-shrink: 0;
 }
 #navToggle span{
     height: 2px;
@@ -585,13 +586,13 @@ align-items: center;
         background-color: #fff;
         flex-direction: column;
         position: fixed;
-        left: 0;
+        right: 0;
         top: 0;
         bottom: 0;
         height: 100vh;
         justify-content: flex-start;
         transition: .2s ease transform;
-        transform: translateX(-100%);
+        transform: translateX(100%);
         width: 360px;
         max-width: 80%;
         z-index: 100000;
@@ -605,7 +606,7 @@ align-items: center;
         flex-direction: column;
     }
     .menu_kat_in{
-        padding-left: 0 !important;
+        padding: 0 20px !important;
     }
     body.--navActive{
         overflow: hidden;
@@ -618,7 +619,6 @@ align-items: center;
         display:  flex;
     }
 }
-
 
 
 
@@ -765,8 +765,28 @@ align-items: center;
   .kroky_kosiku{
     margin-top: 40px;
     margin-bottom: -40px;
+    max-width: 1180px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
+  .krok_a, .krok_na{
+        width: auto;
+  }
+  @media screen and (max-width: 991px){
+    .kroky_kosiku{
+        margin-bottom: 0px;
+        margin-top: 0;
+      } 
+  }
+
+
 
   .kat_filtr{
     height: auto;
+  }
+
+  .sub_dk{
+      width: auto;
+      padding: 0 25px;
   }
