--- a/style.css
+++ b/style.css
@@ -447,6 +447,16 @@ span.p_nadpisy{
     grid-gap: 20px;
     margin-top: 20px;
 }
+@media screen and (max-width: 991px){
+    .submenu-wrap{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+@media screen and (max-width: 575px){
+    .submenu-wrap{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
 .submenu_kat_box{
     float: none;
     width: 100%;
