--- a/style.css
+++ b/style.css
@@ -7,22 +7,23 @@ body {
     font-size: 16px;
 }
 
-img{
+img {
     width: auto;
     max-width: 100%;
 }
-.top_pruh{
 
-}
-.top_pruh_in{
+.top_pruh {}
+
+.top_pruh_in {
     max-width: 1220px;
     padding-right: 20px;
     padding-left: 20px;
     width: 100%;
     margin: 0 auto;
 }
-@media screen and (max-width: 991px){
-    .top_pruh{
+
+@media screen and (max-width: 991px) {
+    .top_pruh {
         display: none;
     }
 }
@@ -41,7 +42,8 @@ img{
     background: transparent;
     border: 0;
 }
-.holder2{
+
+.holder2 {
     max-width: 1180px;
     background: #fff;
     border: solid 1px #dedede;
@@ -49,16 +51,19 @@ img{
     margin: 40px auto;
     width: 100%;
 }
-@media screen and (max-width: 991px){
-    .holder2{
+
+@media screen and (max-width: 991px) {
+    .holder2 {
         margin-top: 0;
     }
 }
-.clear{
+
+.clear {
     display: flex !important;
     height: 0 !important;
 }
-.product-grid .clear, .boxy_produkty_uvodka .clear, .box_nadpisy_adn .clear{
+
+.product-grid .clear, .boxy_produkty_uvodka .clear, .box_nadpisy_adn .clear {
     display: none !important;
 }
 
@@ -79,15 +84,18 @@ img{
     background-position: center top;
     background-repeat: no-repeat;
 }
+
 .top_menu_slider {
     width: auto;
     height: 100%;
     margin: 0px;
     padding: 0px;
 }
-.bx-wrapper .bx-viewport{
+
+.bx-wrapper .bx-viewport {
     height: 520px !important;
 }
+
 ul.bxslider {
     width: auto;
     height: 100%;
@@ -96,10 +104,12 @@ ul.bxslider {
     overflow: hidden;
     background-color: transparent;
 }
-ul.bxslider > li{
+
+ul.bxslider>li {
     height: 100% !important;
 }
-.slider_uvodka_box{
+
+.slider_uvodka_box {
     height: 100%;
     background-position: center left !important;
     display: flex;
@@ -109,10 +119,11 @@ ul.bxslider > li{
     padding-left: 50%;
 }
 
-.bx-wrapper .bx-pager, .bx-wrapper .bx-controls-auto{
+.bx-wrapper .bx-pager, .bx-wrapper .bx-controls-auto {
     bottom: 20px;
 }
-.slider_uvodka_box_nadpis{
+
+.slider_uvodka_box_nadpis {
     margin-top: 0;
 }
 
@@ -124,14 +135,21 @@ ul.bxslider > li{
     position: relative;
 }
 
-.top_pruh2_vyhl, .top_pruh2_vyhl_h{
+.top_pruh2_vyhl, .top_pruh2_vyhl_h {
     order: 10;
 }
-.top_pruh2_kosik, .top_pruh2_kosik_h{
+
+.top_pruh2_kosik, .top_pruh2_kosik_h {
     order: 20;
 }
-.top_pruh2_prihlas, .top_pruh2_prihlas_h{
+
+.top_pruh2_prihlas, .top_pruh2_prihlas_h {
     order: 15;
+}
+.top_pruh_in_menu{
+    float: left;
+    width: auto;
+    height: auto;
 }
 .top_kosik_pocet {
     position: absolute;
@@ -139,12 +157,17 @@ ul.bxslider > li{
     top: 29px;
     right: 41px;
 }
-
-.poradna_box{
+@media screen and (max-width: 991px) {
+    .top_kosik_pocet {
+        top: 20px;
+        right: 4px;
+    }
+}
+.poradna_box {
     z-index: 9999;
 }
 
-.box_nadpisy_adn{
+.box_nadpisy_adn {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
@@ -152,40 +175,47 @@ ul.bxslider > li{
     padding: 20px 0;
     width: 100%;
 }
-.box_a_h{
+
+.box_a_h {
     margin: 0;
     width: auto;
 }
-.box_a{
+
+.box_a {
     margin: 0;
     width: auto;
 }
-@media screen and (max-width: 767px){
-    .box_nadpisy_adn{
+
+@media screen and (max-width: 767px) {
+    .box_nadpisy_adn {
         grid-template-columns: 1fr;
         grid-gap: 20px;
     }
 }
 
 
-.holder4 .box_nadpisy_adn{
+.holder4 .box_nadpisy_adn {
     grid-template-columns: 1fr 1fr;
 }
-@media screen and (max-width: 767px){
-    .holder4 .box_nadpisy_adn{
+
+@media screen and (max-width: 767px) {
+    .holder4 .box_nadpisy_adn {
         grid-template-columns: 1fr;
         grid-gap: 0;
-    } 
-    .box_nejprodavanejsi{
+    }
+
+    .box_nejprodavanejsi {
         margin-top: -1px;
     }
 }
-.boxy_produkty_uvodka{
+
+.boxy_produkty_uvodka {
     display: grid !important;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     margin-bottom: 60px;
 }
+
 .nahledy_produktu {
     float: none;
     width: auto;
@@ -198,10 +228,12 @@ ul.bxslider > li{
     cursor: pointer;
     position: relative;
 }
+
 .nahledy_produktu_foto_obal {
     position: relative;
     padding-bottom: 100%;
 }
+
 .nahledy_produktu_foto_obal a {
     position: absolute;
     top: 0;
@@ -214,17 +246,20 @@ ul.bxslider > li{
     justify-content: center;
     overflow: hidden;
 }
+
 .nahledy_produktu_foto_obal img {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
     width: auto !important;
 }
-.nahledy_produktu > img{
+
+.nahledy_produktu>img {
     margin: 0 !important;
     right: 20px;
 }
-.nahledy_produktu_popis{
+
+.nahledy_produktu_popis {
     position: absolute;
     width: auto;
     right: 0px;
@@ -247,6 +282,7 @@ ul.bxslider > li{
     overflow: hidden;
     margin: 20px 0;
 }
+
 .nahledy_produktu_ceny {
     width: auto;
     display: flex;
@@ -255,7 +291,8 @@ ul.bxslider > li{
     margin-bottom: 20px;
 
 }
-.nahledy_produktu_cena{
+
+.nahledy_produktu_cena {
     display: flex;
     align-items: flex-start;
     float: none;
@@ -264,12 +301,12 @@ ul.bxslider > li{
 }
 
 
-.nahledy_produktu_dostupnost{
+.nahledy_produktu_dostupnost {
     margin-top: 20px;
 }
 
-@media screen and (max-width: 991px){
-    .boxy_produkty_uvodka{
+@media screen and (max-width: 991px) {
+    .boxy_produkty_uvodka {
         grid-template-columns: 1fr 1fr;
     }
 }
@@ -278,27 +315,29 @@ ul.bxslider > li{
     height: 60px;
     line-height: 60px;
 }
-.drobinka a{
 
-}
-
+.drobinka a {}
 
 
-.infobox_pata-wrap{
+
+.infobox_pata-wrap {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
 }
-@media screen and (max-width: 991px){
-    .infobox_pata-wrap{
+
+@media screen and (max-width: 991px) {
+    .infobox_pata-wrap {
         grid-template-columns: 1fr 1fr;
     }
 }
-@media screen and (max-width: 575px){
-    .infobox_pata-wrap{
+
+@media screen and (max-width: 575px) {
+    .infobox_pata-wrap {
         grid-template-columns: 1fr;
     }
 }
+
 .infobox_pata {
     float: none;
     width: 100%;
@@ -310,33 +349,38 @@ ul.bxslider > li{
     margin-right: 0px;
 }
 
-.text_uvod_obal{
+.text_uvod_obal {
     height: auto;
     padding: 60px 0;
 }
-.pata_obal{
+
+.pata_obal {
     height: auto;
     background-position: center bottom -30px;
 }
-.pata_box1, .pata_box2{
+
+.pata_box1, .pata_box2 {
     height: auto;
     width: 33.333%;
 }
-@media screen and (max-width: 767px){
-    .pata_box1, .pata_box2{
+
+@media screen and (max-width: 767px) {
+    .pata_box1, .pata_box2 {
         height: auto;
         width: 100%;
     }
-    .pata_box1{
+
+    .pata_box1 {
         margin-bottom: 40px;
     }
 }
 
-span.p_nadpisy{
+span.p_nadpisy {
     display: block;
     padding-bottom: 20px;
 }
-.pata_odkazy{
+
+.pata_odkazy {
     height: auto;
     margin: 0;
     padding: 30px 0;
@@ -344,57 +388,66 @@ span.p_nadpisy{
     width: 100%;
     margin-top: 60px;
 }
+
 .nl {
     height: auto;
     margin-bottom: 60px;
     padding: 30px 0;
 }
-.nl .holder{
+
+.nl .holder {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.nl_leva{
-    float: none;
-    width: auto;
-    height: auto;
-    margin: 0;
-}
-.nl_prava{
+
+.nl_leva {
     float: none;
     width: auto;
     height: auto;
     margin: 0;
 }
 
-@media screen and (max-width: 991px){
-    .nl .holder{
+.nl_prava {
+    float: none;
+    width: auto;
+    height: auto;
+    margin: 0;
+}
+
+@media screen and (max-width: 991px) {
+    .nl .holder {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    .pata_odkazy{
+
+    .pata_odkazy {
         margin-top: 30px;
     }
 }
 
-#neewsletter_f > p{
+#neewsletter_f>p {
     display: flex;
 }
-.inp_n{
+
+.inp_n {
     width: 100%;
 }
-#neewsletter_f a{
+
+#neewsletter_f a {
     padding-top: 10px;
     display: inline-flex;
 }
-.detail-produktu{
+
+.detail-produktu {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin-bottom: 20px;
 }
-.detail_foto{
+
+.detail_foto {
     float: none;
     width: 100%;
 }
@@ -403,34 +456,38 @@ span.p_nadpisy{
     float: none;
     width: 100%;
 }
-@media screen and (max-width: 991px){
-    .detail-produktu{
+
+@media screen and (max-width: 991px) {
+    .detail-produktu {
         grid-template-columns: 1fr;
         grid-gap: 20px;
         margin-bottom: 20px;
     }
 }
 
-.ps_top{
+.ps_top {
     display: flex;
     width: 100%;
 }
-.box_a2_h{
+
+.box_a2_h {
     float: none;
     width: auto;
     flex-basis: 100%;
 }
-.box_a2{
+
+.box_a2 {
     float: none;
     width: auto;
     flex-basis: 100%;
 }
 
 
-.neewsletter_f > p{
+.neewsletter_f>p {
     display: flex;
     margin-bottom: 10px;
 }
+
 .inp_s1 {
     margin-left: 20px;
     width: auto;
@@ -438,12 +495,15 @@ span.p_nadpisy{
     padding: 0 20px;
     background-image: none;
 }
-.aktuality_foot_archiv + .clear{
+
+.aktuality_foot_archiv+.clear {
     height: 40px !important;
-  }
-.aktuality_foot_nadpis2{
+}
+
+.aktuality_foot_nadpis2 {
     margin: 20px 0;
 }
+
 .product-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -451,29 +511,34 @@ span.p_nadpisy{
     margin-bottom: 20px;
     width: 100%;
 }
-@media screen and (max-width: 991px){
+
+@media screen and (max-width: 991px) {
     .product-grid {
         grid-template-columns: 1fr 1fr;
         grid-gap: 10px;
     }
 }
-.submenu-wrap{
+
+.submenu-wrap {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
     margin-top: 20px;
 }
-@media screen and (max-width: 991px){
-    .submenu-wrap{
+
+@media screen and (max-width: 991px) {
+    .submenu-wrap {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
-@media screen and (max-width: 575px){
-    .submenu-wrap{
+
+@media screen and (max-width: 575px) {
+    .submenu-wrap {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
-.submenu_kat_box{
+
+.submenu_kat_box {
     float: none;
     width: 100%;
     height: 58px;
@@ -482,15 +547,18 @@ span.p_nadpisy{
     margin-right: 0;
     margin-bottom: 0;
     cursor: pointer;
-display: flex;
-align-items: center;
+    display: flex;
+    align-items: center;
 }
-.submenu_kat_box_obr{
+
+.submenu_kat_box_obr {
     height: 100%;
 }
-.submenu_kat_box_obr img{
+
+.submenu_kat_box_obr img {
     max-height: 100%;
 }
+
 .submenu_kat_box_text {
     float: none;
     width: auto;
@@ -500,11 +568,12 @@ align-items: center;
     overflow: hidden;
 }
 
-#filtr{
+#filtr {
     display: flex;
     flex-direction: column;
 }
-.strankovani_kategorie{
+
+.strankovani_kategorie {
     width: auto;
     height: auto;
     text-align: right;
@@ -524,6 +593,7 @@ align-items: center;
     display: flex;
     align-items: center;
 }
+
 .box_nejprodavanejsi_obal_text {
     float: none;
     width: auto;
@@ -532,6 +602,7 @@ align-items: center;
     line-height: 130%;
     margin-top: 0;
 }
+
 .box_nejprodavanejsi_foto {
     float: none;
     width: 80px;
@@ -560,23 +631,24 @@ align-items: center;
     margin-right: 10px;
 }
 
-.heading-bestseller{
+.heading-bestseller {
     margin-top: 20px;
 }
 
-#top-link-block{
+#top-link-block {
     z-index: 9999;
 }
 
 
-#navToggle{
+#navToggle {
     height: 100%;
     width: 52px;
     cursor: pointer;
     display: none;
     flex-shrink: 0;
 }
-#navToggle span{
+
+#navToggle span {
     height: 2px;
     width: 18px;
     background: white;
@@ -589,7 +661,8 @@ align-items: center;
     position: relative;
     transition: 0.3s all ease;
 }
-#navToggle span::before, #navToggle span::after{
+
+#navToggle span::before, #navToggle span::after {
     content: "";
     position: absolute;
     top: 0;
@@ -607,8 +680,8 @@ align-items: center;
 }
 
 
-@media screen and (max-width: 991px){
-    .top_menu_kat_obal{
+@media screen and (max-width: 991px) {
+    .top_menu_kat_obal {
         background-color: #fff;
         flex-direction: column;
         position: fixed;
@@ -625,24 +698,29 @@ align-items: center;
         padding: 20px 0;
         overflow: auto;
     }
-    .top_menu_kat_in{
+
+    .top_menu_kat_in {
         height: 100%;
         width: auto;
         display: flex;
         flex-direction: column;
     }
-    .menu_kat_in{
+
+    .menu_kat_in {
         padding: 0 20px !important;
     }
-    body.--navActive{
+
+    body.--navActive {
         overflow: hidden;
     }
-    body.--navActive .top_menu_kat_obal{
+
+    body.--navActive .top_menu_kat_obal {
         transform: translateX(0%);
         content-visibility: visible;
     }
-    #navToggle{
-        display:  flex;
+
+    #navToggle {
+        display: flex;
     }
 }
 
@@ -658,19 +736,21 @@ align-items: center;
     padding: 0 20px;
     align-items: center;
 }
-.top_pruh2_logo{
+
+.top_pruh2_logo {
     float: none;
     width: auto;
     height: auto;
     max-height: 100%;
     display: flex;
 }
-.top_pruh2_logo a{
+
+.top_pruh2_logo a {
     display: flex;
     flex-shrink: 0;
 }
 
-.top_pruh2_text{
+.top_pruh2_text {
     float: none;
     display: flex;
     flex-grow: 1;
@@ -679,41 +759,47 @@ align-items: center;
     margin-left: 20px;
 }
 
-.top_pruh2_vyhl{
+.top_pruh2_vyhl {
     border-left: solid 1px #353535;
 }
 
-@media screen and (max-width: 991px){
-    .top_pruh2{
+@media screen and (max-width: 991px) {
+    .top_pruh2 {
         height: 52px;
         background-image: none;
     }
-    .top_pruh2_logo{
+
+    .top_pruh2_logo {
         flex-grow: 1;
         padding-left: 20px;
     }
-    .top_pruh2_in{
+
+    .top_pruh2_in {
         height: 100%;
         padding: 0;
     }
-    .top_pruh2_text{
+
+    .top_pruh2_text {
         display: none;
     }
-    .top_pruh2_kosik, .top_pruh2_kosik_h{
+
+    .top_pruh2_kosik, .top_pruh2_kosik_h {
         line-height: 1;
         height: 100%;
         font-size: 0;
         background-position: bottom right;
         width: 52px;
     }
-    .top_pruh2_prihlas, .top_pruh2_prihlas_h{
+
+    .top_pruh2_prihlas, .top_pruh2_prihlas_h {
         line-height: 1;
         height: 100%;
         font-size: 0;
         background-position: bottom right;
         width: 52px;
     }
-    .top_pruh2_vyhl, .top_pruh2_vyhl_h{
+
+    .top_pruh2_vyhl, .top_pruh2_vyhl_h {
         line-height: 1;
         height: 100%;
         font-size: 0;
@@ -722,97 +808,136 @@ align-items: center;
     }
 }
 
-.aktuality_box_in-wrap{
+.aktuality_box_in-wrap {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;;
+    grid-template-columns: 1fr 1fr 1fr;
+    ;
     grid-gap: 20px;
     margin-bottom: 45px;
 }
-.aktuality_box_in{
+
+.aktuality_box_in {
     height: auto;
     float: none;
     width: 100%;
     display: flex;
 }
-@media screen and (max-width: 767px){
 
-    .aktuality_box_in-wrap{
+@media screen and (max-width: 767px) {
+
+    .aktuality_box_in-wrap {
         grid-template-columns: 1fr;
         grid-gap: 20px;
     }
 }
-.det_box_sklad{
+
+.det_box_sklad {
     display: flex;
     justify-content: space-between;
-  }
+}
 
-  .detail_box_pravy_obal_cerny{
+.detail_box_pravy_obal_cerny {
     padding: 40px 20px;
-  }
+}
 
-  .ak_uvod_foto{
+.ak_uvod_foto {
     float: none;
     flex-shrink: 0;
-  }
-  .ak_uvod_nadpis_text{
+}
+
+.ak_uvod_nadpis_text {
     width: 100%;
     margin: 0;
     padding-left: 15px;
-  }
+}
 
 
-  .nahled_obal_wrap{
+.nahled_obal_wrap {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-  }
-  .nahled_obal_dp{
+}
+
+.nahled_obal_dp {
     margin: 0;
     display: flex;
     align-items: center;
     padding: 15px;
-  }
-  .nahled_obal_dp_foto{
+}
+
+.nahled_obal_dp_foto {
     margin: 0;
     height: auto;
-      display: flex;
+    display: flex;
     align-items: center;
     flex-shrink: 0;
-  }
-  .nahled_obal_dp_text{
-      margin: 0;
+}
+
+.nahled_obal_dp_text {
+    margin: 0;
     width: auto;
     padding-left: 15px;
-  }
-  .nahled_obal_dp_nadpis{
-    font-size: 22px;
-  }
+}
 
-  .kroky_kosiku{
+.nahled_obal_dp_nadpis {
+    font-size: 22px;
+}
+
+.kroky_kosiku {
     margin-top: 40px;
     margin-bottom: -40px;
     max-width: 1180px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-  .krok_a, .krok_na{
-        width: auto;
-  }
-  @media screen and (max-width: 991px){
-    .kroky_kosiku{
+}
+
+.krok_a, .krok_na {
+    width: auto;
+}
+
+@media screen and (max-width: 991px) {
+    .kroky_kosiku {
         margin-bottom: 0px;
         margin-top: 0;
-      } 
-  }
+    }
+}
 
 
 
-  .kat_filtr{
+.kat_filtr {
     height: auto;
-  }
+}
 
-  .sub_dk{
-      width: auto;
-      padding: 0 25px;
-  }
+.sub_dk {
+    width: auto;
+    padding: 0 25px;
+}
+
+
+
+.prihlas_okno {
+
+}
+.vyhl_okno{
+
+}
+@media screen and (max-width: 991px) {
+    .prihlas_okno {
+        right: 0;
+        top: 52px;
+        margin: 0;
+    }
+    .vyhl_okno{
+        margin: 0;
+        top: 52px;
+        width: 100%;
+    }
+    .vyhl_okno form{
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+}
