--- a/style.css
+++ b/style.css
@@ -1019,3 +1019,59 @@ span.p_nadpisy {
   .product-cta .sub_dk{
     flex-grow: 1;
   }
+
+  .kos_celkem form td{
+    padding: 5px 0;
+  }
+  .kos_celkem form tr > td:last-child{
+    white-space: nowrap;
+    text-align: right;
+  }
+  .kos_celkem > div{
+    margin: 20px 0;
+  display: flex;
+    justify-content: space-between;
+  }
+  .kos_celkem_in{
+  float: none;
+      line-height: 1;
+    height: auto;
+  }
+  .kos_celkem > div > span{
+        display: flex;
+      flex-shrink: 0;
+      flex-grow: 1;
+        align-items: center;
+  }
+  .poznamka-wrap{
+    margin-bottom: 40px;
+  }
+  .poznamka-form{
+         display: flex;
+    margin-top: 20px;
+  }
+  .poznamka_kosik{
+    margin-right: 20px;
+  }
+  
+  .div_kos_text{
+    margin-bottom: 20px;
+  }
+
+
+  @media screen and (max-width: 767px) {
+  .foxentry-form tr{
+    width: 100%;
+      display: flex;
+      flex-direction: column;
+  }
+  .foxentry-form tr td{
+  flex-direction: column;
+      display: flex;
+      margin-bottom: 15px;
+  }
+  .foxentry-form tr:nth-child(even){
+    display: none;
+  }
+}
+  
